--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,20 +6,6 @@
 
 
   # --------------------------------------------- #
-  # INCLUDED VARIABLES
-  # --------------------------------------------- #
-  vars_files:
-    - "vars/{{ __pve_env | default('tower_lab') }}/defaults.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/environment_packages.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/inventory_vars.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/lab_nodes.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/network.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/prometheus.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/ssh_keypair.yml"
-    - "vars/{{ __pve_env | default('tower_lab') }}/template_defaults.yml"
-
-
-  # --------------------------------------------- #
   # INLINE VARS
   # --------------------------------------------- #
   vars:
@@ -32,6 +18,11 @@
   # TASKS
   # --------------------------------------------- #
   tasks:
+    - name: Include required variables for environment
+      include_vars:
+        dir: "vars/{{ __pve_env | default('tower_lab') }}"
+
+
     - name         : Provision environment
       include_role :
         name       : "{{ lv_provision }}"
